# ektro-pen

./: .gitignore  CLAUDE.md  EKTRO_REGISTER.bat  INSTALL_AND_USE.md  LICENSE  NOTICE  README.md  RUN_BUILD.bat  RUN_DEPLOY.bat  SECURITY.md  STATUS.md  build-everything.bat  deploy-and-verify.bat  experience.bat
.githooks/: pre-commit
.github/workflows/: gitleaks.yml
config/: default.custom.yaml
docs/: cycle1-spike-day1.md  cycle1-summary.md  day2-runbook.md  decisions.md  dev-mirrors.md  ektro-link-protocol.md  ime-ingest-contract.md  local-memory-schema.md  privacy-boundary.md  troubleshooting.md  week3-inline-patch-design.md
docs/benchmarks/: qwen3-firsttoken.md
docs/superpowers/plans/: 2026-05-19-cross-platform-s0-s1.md  2026-05-19-s2-android-trime.md
docs/superpowers/specs/: 2026-05-19-cross-platform-port-design.md  2026-05-19-s2-android-design.md
openspec/changes/ektro-mvp/: design.md  proposal.md  tasks.md
openspec/changes/ektro-pen-macos/: design.md  proposal.md  tasks.md
openspec/changes/ektro-pen-macos/specs/macos-commit-capture/: spec.md
openspec/changes/ektro-pen-macos/specs/macos-ime-shell/: spec.md
openspec/changes/ektro-pen-macos/specs/macos-launchagent-distribution/: spec.md
openspec/changes/ektro-pen-macos/specs/macos-link-ui/: spec.md
packaging/macos/: README.md  com.ektro.sync.plist.template  install-launchagent.sh  uninstall-launchagent.sh
scripts/: install-hooks.sh
src-cpp/: CMakeLists.txt  INSTALL.md  PORTING_GUIDE.md
src-cpp/include/ektro/: bridge.h  context_builder.h  ektro_sdk.h  log.h  log_result.h  memory_store.h  memory_view.h  predictor.h  reranker.h  schema.h
src-cpp/src/: async_trigger.cpp  baseline_predictor.cpp  baseline_reranker.cpp  bridge.cpp  context_builder.cpp  ektro_sdk.cpp  log.cpp  memory_store.cpp  predictor_client.cpp  schema.cpp
src-cpp/tests/: test_baseline_predictor.cpp  test_baseline_reranker.cpp  test_bridge.cpp  test_c_abi.cpp  test_memory_store.cpp  test_schema_v2.cpp
src/auth/: __init__.py  __main__.py  device_grant.py  keyring_store.py  link.py  loopback.py  oauth_client.py  pkce.py  token_manager.py
src/common/: logging.py
src/memory/: README.md  __main__.py  link_store.py  schema.py  store.py
src/predictor/: README.md  baseline.py  client.py  trigger.py
src/rerank/: README.md  baseline.py
src/shared/: context_builder.py  protocols.py
src/sync/: __init__.py  __main__.py  backfill.py  hasher.py  http_client.py  sync_client.py  uploader.py
tests/auth/: test_keyring_store.py  test_loopback.py  test_pkce.py  test_token_manager.py
tests/integration/: demo_full_pipeline.py
tests/latency/: bench_server_mode.py  run_first_token_bench.py  smoke_test.py
tests/memory/: bench_memory.py  generate_mock_data.py  test_boundary.py  test_concurrency.py  test_link_store.py  test_schema_v2.py  test_store.py
tests/predictor/: test_client.py  test_trigger_race.py
tests/rerank/: bench_baseline.py  demo_pipeline.py  test_baseline.py
tests/sync/: test_backfill.py  test_hasher.py  test_http_client.py  test_uploader.py
upstream/patches/: 01-globals-add-force-show.patch  02-candidatelist-show-ui-gate.patch  03-keyeventsink-ctrl-hold.patch  04-ektro-rerank-integration.patch
